--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,7 @@
-[submodule "chia-blockchain-gui"]
-	path = chia-blockchain-gui
-	url = https://github.com/Chia-Network/chia-blockchain-gui.git
-	branch = pools
 [submodule "mozilla-ca"]
 	path = mozilla-ca
 	url = https://github.com/Chia-Network/mozilla-ca.git
         branch = main
+[submodule "silicoin-light-gui"]
+	path = silicoin-light-gui
+	url = https://github.com/zcomputerwiz/silicoin-light-gui/
