--- a/.github/workflows/build-macos-m1-installer.yml
+++ b/.github/workflows/build-macos-m1-installer.yml
@@ -98,7 +98,7 @@ jobs:
         run: |
           export PATH=$(brew --prefix node@16)/bin:$PATH
           . ./activate
-          cd ./chia-blockchain-gui
+          cd ./silicoin-light-gui
           arch -arm64 git status
           cd ../build_scripts
           arch -arm64 sh build_macos_m1.sh
