--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -72,7 +72,7 @@ jobs:
       run: |
         . ./activate
         ldd --version
-        cd ./chia-blockchain-gui
+        cd ./silicoin-light-gui
         git status
         cd ../build_scripts
         sh build_linux_deb.sh arm64
