--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -109,7 +109,7 @@ jobs:
         APPLE_NOTARIZE_PASSWORD: "${{ secrets.APPLE_NOTARIZE_PASSWORD }}"
       run: |
         . ./activate
-        cd ./chia-blockchain-gui
+        cd ./silicoin-light-gui
         git status
         cd ../build_scripts
         sh build_macos.sh
