--- a/.github/workflows/build-linux-arm64-installer.yml
+++ b/.github/workflows/build-linux-arm64-installer.yml
@@ -1,9 +1,9 @@
 name: Linux ARM64 installer on Python 3.8
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main
       - protocol_and_cats_rebased
     tags:
       - '**'
@@ -51,15 +51,15 @@ jobs:
         echo "::set-output name=SILICOIN_INSTALLER_VERSION::$(python3 ./build_scripts/installer-version.py)"
         deactivate
 
-    - name: Test for secrets access
-      id: check_secrets
-      shell: bash
-      run: |
-        unset HAS_SECRET
-        if [ -n "$SECRET" ]; then HAS_SECRET='true' ; fi
-        echo ::set-output name=HAS_SECRET::${HAS_SECRET}
-      env:
-        SECRET: "${{ secrets.INSTALLER_UPLOAD_SECRET }}"
+    # - name: Test for secrets access
+    #  id: check_secrets
+    #  shell: bash
+    #  run: |
+    #    unset HAS_SECRET
+    #    if [ -n "$SECRET" ]; then HAS_SECRET='true' ; fi
+    #    echo ::set-output name=HAS_SECRET::${HAS_SECRET}
+    #  env:
+    #    SECRET: "${{ secrets.INSTALLER_UPLOAD_SECRET }}"
 
     - name: Run install script
       env:
@@ -83,21 +83,21 @@ jobs:
         name: Linux-ARM-64-Installer
         path: ${{ github.workspace }}/build_scripts/final_installer/
 
-    - name: Configure AWS Credentials
-      if: steps.check_secrets.outputs.HAS_SECRET
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.INSTALLER_UPLOAD_KEY }}
-        aws-secret-access-key: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
-        aws-region: us-west-2
+    # - name: Configure AWS Credentials
+    #  if: steps.check_secrets.outputs.HAS_SECRET
+    #  uses: aws-actions/configure-aws-credentials@v1
+    #  with:
+    #    aws-access-key-id: ${{ secrets.INSTALLER_UPLOAD_KEY }}
+    #    aws-secret-access-key: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
+    #    aws-region: us-west-2
 
-    - name: Upload to s3
-      env:
-        SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-      if: steps.check_secrets.outputs.HAS_SECRET
-      run: |
-          aws s3 cp "$GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb" s3://download-silicoin-net/builds/
-          aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb s3://download-silicoin-net/protocol_and_cats_rebased/
+    # - name: Upload to s3
+    #   env:
+    #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+    #   if: steps.check_secrets.outputs.HAS_SECRET
+    #   run: |
+    #       aws s3 cp "$GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb" s3://download-silicoin-net/builds/
+    #       aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb s3://download-silicoin-net/protocol_and_cats_rebased/
 
     - name: Create Checksums
       if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/protocol_and_cats_rebased'
@@ -108,44 +108,44 @@ jobs:
         sha256sum $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb > $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.sha256
         ls $GITHUB_WORKSPACE/build_scripts/final_installer/
 
-    - name: Install py3createtorrent
-      if: startsWith(github.ref, 'refs/tags/')
-      run: |
-        pip3 install py3createtorrent
+    # - name: Install py3createtorrent
+    #   if: startsWith(github.ref, 'refs/tags/')
+    #   run: |
+    #     pip3 install py3createtorrent
 
-    - name: Create torrent
-      if: startsWith(github.ref, 'refs/tags/')
-      env:
-        SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-      run: |
-        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb -o $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.torrent --webseed https://download-silicoin-net.s3.us-west-2.amazonaws.com/install/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb
-        ls $GITHUB_WORKSPACE/build_scripts/final_installer/
+    # - name: Create torrent
+    #   if: startsWith(github.ref, 'refs/tags/')
+    #   env:
+    #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+    #   run: |
+    #     py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb -o $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.torrent --webseed https://download-silicoin-net.s3.us-west-2.amazonaws.com/install/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb
+    #     ls $GITHUB_WORKSPACE/build_scripts/final_installer/
 
-    - name: Upload Beta Installer
-      if: steps.check_secrets.outputs.HAS_SECRET && github.ref == 'refs/heads/main'
-      env:
-        SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-      run: |
-        aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb s3://download-silicoin-net/beta/silicoin-blockchain_arm64_latest_beta.deb
-        aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.sha256 s3://download-silicoin-net/beta/silicoin-blockchain_arm64_latest_beta.deb.sha256
+    # - name: Upload Beta Installer
+    #   if: steps.check_secrets.outputs.HAS_SECRET && github.ref == 'refs/heads/main'
+    #   env:
+    #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+    #   run: |
+    #     aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb s3://download-silicoin-net/beta/silicoin-blockchain_arm64_latest_beta.deb
+    #     aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.sha256 s3://download-silicoin-net/beta/silicoin-blockchain_arm64_latest_beta.deb.sha256
 
-    - name: Upload CATs Beta Installer
-      if: steps.check_secrets.outputs.HAS_SECRET && github.ref == 'refs/heads/protocol_and_cats_rebased'
-      env:
-        SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-      run: |
-        aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb s3://download-silicoin-net/cats-beta-installers/silicoin-blockchain_arm64_latest_cats_beta.deb
-        aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.sha256 s3://download-silicoin-net/cats-beta-installers/silicoin-blockchain_arm64_latest_cats_beta.deb.sha256
+    # - name: Upload CATs Beta Installer
+    #   if: steps.check_secrets.outputs.HAS_SECRET && github.ref == 'refs/heads/protocol_and_cats_rebased'
+    #   env:
+    #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+    #   run: |
+    #     aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb s3://download-silicoin-net/cats-beta-installers/silicoin-blockchain_arm64_latest_cats_beta.deb
+    #     aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.sha256 s3://download-silicoin-net/cats-beta-installers/silicoin-blockchain_arm64_latest_cats_beta.deb.sha256
 
-    - name: Upload Release Files
-      if: steps.check_secrets.outputs.HAS_SECRET && startsWith(github.ref, 'refs/tags/')
-      env:
-        SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-      run: |
-          ls $GITHUB_WORKSPACE/build_scripts/final_installer/
-          aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb s3://download-silicoin-net/install/
-          aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.sha256 s3://download-silicoin-net/install/
-          aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.torrent s3://download-silicoin-net/torrents/
+    # - name: Upload Release Files
+    #   if: steps.check_secrets.outputs.HAS_SECRET && startsWith(github.ref, 'refs/tags/')
+    #   env:
+    #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+    #   run: |
+    #       ls $GITHUB_WORKSPACE/build_scripts/final_installer/
+    #       aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb s3://download-silicoin-net/install/
+    #       aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.sha256 s3://download-silicoin-net/install/
+    #       aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_arm64.deb.torrent s3://download-silicoin-net/torrents/
 
     - name: Get tag name
       if: startsWith(github.ref, 'refs/tags/')
