--- a/.github/workflows/build-linux-installer-deb.yml
+++ b/.github/workflows/build-linux-installer-deb.yml
@@ -4,7 +4,6 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
       - protocol_and_cats_rebased
     tags:
       - '**'
@@ -82,15 +81,15 @@ jobs:
         echo "::set-output name=SILICOIN_INSTALLER_VERSION::$(python3 ./build_scripts/installer-version.py)"
         deactivate
 
-    - name: Test for secrets access
-      id: check_secrets
-      shell: bash
-      run: |
-        unset HAS_SECRET
-        if [ -n "$SECRET" ]; then HAS_SECRET='true' ; fi
-        echo ::set-output name=HAS_SECRET::${HAS_SECRET}
-      env:
-        SECRET: "${{ secrets.INSTALLER_UPLOAD_SECRET }}"
+    # - name: Test for secrets access
+    #   id: check_secrets
+    #   shell: bash
+    #   run: |
+    #     unset HAS_SECRET
+    #     if [ -n "$SECRET" ]; then HAS_SECRET='true' ; fi
+    #     echo ::set-output name=HAS_SECRET::${HAS_SECRET}
+    #   env:
+    #     SECRET: "${{ secrets.INSTALLER_UPLOAD_SECRET }}"
 
     - name: Run install script
       env:
@@ -123,22 +122,22 @@ jobs:
         name: Linux-Installers
         path: ${{ github.workspace }}/build_scripts/final_installer/
 
-    - name: Configure AWS Credentials
-      if: steps.check_secrets.outputs.HAS_SECRET
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.INSTALLER_UPLOAD_KEY }}
-        aws-secret-access-key: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
-        aws-region: us-west-2
+    # - name: Configure AWS Credentials
+    #   if: steps.check_secrets.outputs.HAS_SECRET
+    #   uses: aws-actions/configure-aws-credentials@v1
+    #   with:
+    #     aws-access-key-id: ${{ secrets.INSTALLER_UPLOAD_KEY }}
+    #     aws-secret-access-key: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
+    #     aws-region: us-west-2
 
-    - name: Upload to s3
-      if: steps.check_secrets.outputs.HAS_SECRET
-      env:
-          SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-      run: |
-          ls ${{ github.workspace }}/build_scripts/final_installer/
-          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb s3://download-silicoin-net/builds/
-          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb s3://download-silicoin-net/protocol_and_cats_rebased/
+    # - name: Upload to s3
+    #   if: steps.check_secrets.outputs.HAS_SECRET
+    #   env:
+    #       SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+    #   run: |
+    #       ls ${{ github.workspace }}/build_scripts/final_installer/
+    #       aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb s3://download-silicoin-net/builds/
+    #       aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb s3://download-silicoin-net/protocol_and_cats_rebased/
 
     - name: Create Checksums
       if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/protocol_and_cats_rebased'
@@ -149,43 +148,43 @@ jobs:
          sha256sum ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb > ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.sha256
          ls ${{ github.workspace }}/build_scripts/final_installer/
 
-    - name: Install py3createtorrent
-      if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main'
-      run: |
-        pip3 install py3createtorrent
+    # - name: Install py3createtorrent
+    #   if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main'
+    #   run: |
+    #     pip3 install py3createtorrent
 
-    - name: Create .deb torrent
-      env:
-        SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-      if: startsWith(github.ref, 'refs/tags/')
-      run: |
-        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb -o ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.torrent --webseed https://download-silicoin-net.s3.us-west-2.amazonaws.com/install/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb
-        ls
+    # - name: Create .deb torrent
+    #   env:
+    #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+    #   if: startsWith(github.ref, 'refs/tags/')
+    #   run: |
+    #     py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb -o ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.torrent --webseed https://download-silicoin-net.s3.us-west-2.amazonaws.com/install/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb
+    #     ls
 
-    - name: Upload Beta Installer
-      if: steps.check_secrets.outputs.HAS_SECRET && github.ref == 'refs/heads/main'
-      env:
-        SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-      run: |
-        aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb s3://download-silicoin-net/beta/silicoin-blockchain_amd64_latest_beta.deb
-        aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.sha256 s3://download-silicoin-net/beta/silicoin-blockchain_amd64_latest_beta.deb.sha256
+    # - name: Upload Beta Installer
+    #   if: steps.check_secrets.outputs.HAS_SECRET && github.ref == 'refs/heads/main'
+    #   env:
+    #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+    #   run: |
+    #     aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb s3://download-silicoin-net/beta/silicoin-blockchain_amd64_latest_beta.deb
+    #     aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.sha256 s3://download-silicoin-net/beta/silicoin-blockchain_amd64_latest_beta.deb.sha256
 
-    - name: Upload CATs Beta Installer
-      if: steps.check_secrets.outputs.HAS_SECRET && github.ref == 'refs/heads/protocol_and_cats_rebased'
-      env:
-        SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-      run: |
-        aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb s3://download-silicoin-net/cats-beta-installers/silicoin-blockchain_amd64_latest_cats_beta.deb
-        aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.sha256 s3://download-silicoin-net/cats-beta-installers/silicoin-blockchain_amd64_latest_cats_beta.deb.sha256
+    # - name: Upload CATs Beta Installer
+    #   if: steps.check_secrets.outputs.HAS_SECRET && github.ref == 'refs/heads/protocol_and_cats_rebased'
+    #   env:
+    #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+    #   run: |
+    #     aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb s3://download-silicoin-net/cats-beta-installers/silicoin-blockchain_amd64_latest_cats_beta.deb
+    #     aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.sha256 s3://download-silicoin-net/cats-beta-installers/silicoin-blockchain_amd64_latest_cats_beta.deb.sha256
 
-    - name: Upload Release Files
-      env:
-        SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-      if: steps.check_secrets.outputs.HAS_SECRET && startsWith(github.ref, 'refs/tags/')
-      run: |
-          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb s3://download-silicoin-net/install/
-          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.sha256 s3://download-silicoin-net/install/
-          aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.torrent s3://download-silicoin-net/torrents/
+    # - name: Upload Release Files
+    #   env:
+    #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+    #   if: steps.check_secrets.outputs.HAS_SECRET && startsWith(github.ref, 'refs/tags/')
+    #   run: |
+    #       aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb s3://download-silicoin-net/install/
+    #       aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.sha256 s3://download-silicoin-net/install/
+    #       aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/silicoin-blockchain_${SILICOIN_INSTALLER_VERSION}_amd64.deb.torrent s3://download-silicoin-net/torrents/
 
     - name: Get tag name
       if: startsWith(github.ref, 'refs/tags/')
