--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -1,9 +1,9 @@
 name: MacOS installer on Catalina and Python 3.8
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main
       - protocol_and_cats_rebased
     tags:
       - '**'
@@ -73,22 +73,22 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: Test for secrets access
-      id: check_secrets
-      shell: bash
-      run: |
-        unset HAS_SECRET
-        if [ -n "$SECRET" ]; then HAS_SECRET='true' ; fi
-        echo ::set-output name=HAS_SECRET::${HAS_SECRET}
-      env:
-        SECRET: "${{ secrets.APPLE_DEV_ID_APP }}"
+    # - name: Test for secrets access
+    #   id: check_secrets
+    #   shell: bash
+    #   run: |
+    #     unset HAS_SECRET
+    #     if [ -n "$SECRET" ]; then HAS_SECRET='true' ; fi
+    #     echo ::set-output name=HAS_SECRET::${HAS_SECRET}
+    #   env:
+    #     SECRET: "${{ secrets.APPLE_DEV_ID_APP }}"
 
-    - name: Import Apple app signing certificate
-      if: steps.check_secrets.outputs.HAS_SECRET
-      uses: Apple-Actions/import-codesign-certs@v1
-      with:
-        p12-file-base64: ${{ secrets.APPLE_DEV_ID_APP }}
-        p12-password: ${{ secrets.APPLE_DEV_ID_APP_PASS }}
+    # - name: Import Apple app signing certificate
+    #   if: steps.check_secrets.outputs.HAS_SECRET
+    #   uses: Apple-Actions/import-codesign-certs@v1
+    #   with:
+    #     p12-file-base64: ${{ secrets.APPLE_DEV_ID_APP }}
+    #     p12-password: ${{ secrets.APPLE_DEV_ID_APP_PASS }}
 
     - name: Run install script
       env:
