--- a/.github/workflows/build-macos-m1-installer.yml
+++ b/.github/workflows/build-macos-m1-installer.yml
@@ -1,9 +1,9 @@
 name: MacOS M1 installer on Python 3.9
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main
       - protocol_and_cats_rebased
     tags:
       - '**'
@@ -41,21 +41,21 @@ jobs:
       - name: Cleanup any leftovers that exist from previous runs
         run: bash build_scripts/clean-runner.sh || true
 
-      - name: Test for secrets access
-        id: check_secrets
-        shell: bash
-        run: |
-          unset HAS_APPLE_SECRET
-          unset HAS_AWS_SECRET
+      # - name: Test for secrets access
+      #   id: check_secrets
+      #   shell: bash
+      #   run: |
+      #     unset HAS_APPLE_SECRET
+      #     unset HAS_AWS_SECRET
 
-          if [ -n "$APPLE_SECRET" ]; then HAS_APPLE_SECRET='true' ; fi
-          echo ::set-output name=HAS_APPLE_SECRET::${HAS_APPLE_SECRET}
+      #     if [ -n "$APPLE_SECRET" ]; then HAS_APPLE_SECRET='true' ; fi
+      #     echo ::set-output name=HAS_APPLE_SECRET::${HAS_APPLE_SECRET}
 
-          if [ -n "$AWS_SECRET" ]; then HAS_AWS_SECRET='true' ; fi
-          echo ::set-output name=HAS_AWS_SECRET::${HAS_AWS_SECRET}
-        env:
-          APPLE_SECRET: "${{ secrets.APPLE_DEV_ID_APP }}"
-          AWS_SECRET: "${{ secrets.INSTALLER_UPLOAD_KEY }}"
+      #     if [ -n "$AWS_SECRET" ]; then HAS_AWS_SECRET='true' ; fi
+      #     echo ::set-output name=HAS_AWS_SECRET::${HAS_AWS_SECRET}
+      #   env:
+      #     APPLE_SECRET: "${{ secrets.APPLE_DEV_ID_APP }}"
+      #     AWS_SECRET: "${{ secrets.INSTALLER_UPLOAD_KEY }}"
 
       - name: Create installer version number
         id: version_number
@@ -72,12 +72,12 @@ jobs:
         run:
           security delete-keychain signing_temp.keychain || true
 
-      - name: Import Apple app signing certificate
-        if: steps.check_secrets.outputs.HAS_APPLE_SECRET
-        uses: Apple-Actions/import-codesign-certs@v1
-        with:
-          p12-file-base64: ${{ secrets.APPLE_DEV_ID_APP }}
-          p12-password: ${{ secrets.APPLE_DEV_ID_APP_PASS }}
+      # - name: Import Apple app signing certificate
+      #   if: steps.check_secrets.outputs.HAS_APPLE_SECRET
+      #   uses: Apple-Actions/import-codesign-certs@v1
+      #   with:
+      #     p12-file-base64: ${{ secrets.APPLE_DEV_ID_APP }}
+      #     p12-password: ${{ secrets.APPLE_DEV_ID_APP_PASS }}
 
       - name: Run install script
         env:
@@ -109,69 +109,69 @@ jobs:
           name: Silicoin-Installer-MacOS-arm64-dmg
           path: ${{ github.workspace }}/build_scripts/final_installer/
 
-      - name: Install AWS CLI
-        if: steps.check_secrets.outputs.HAS_AWS_SECRET
-        run: |
-          arch -arm64 brew install awscli
+      # - name: Install AWS CLI
+      #   if: steps.check_secrets.outputs.HAS_AWS_SECRET
+      #   run: |
+      #     arch -arm64 brew install awscli
 
       - name: Create Checksums
         run: |
           ls
           arch -arm64 shasum -a 256 ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg > ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.sha256
 
-      - name: Upload to s3
-        if: steps.check_secrets.outputs.HAS_AWS_SECRET
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.INSTALLER_UPLOAD_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
-          AWS_REGION: us-west-2
-        run: |
-          arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/builds/
-          arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/protocol_and_cats_rebased/
+      # - name: Upload to s3
+      #   if: steps.check_secrets.outputs.HAS_AWS_SECRET
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.INSTALLER_UPLOAD_KEY }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
+      #     AWS_REGION: us-west-2
+      #   run: |
+      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/builds/
+      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/protocol_and_cats_rebased/
 
-      - name: Install py3createtorrent
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          arch -arm64 pip install py3createtorrent
+      # - name: Install py3createtorrent
+      #   if: startsWith(github.ref, 'refs/tags/')
+      #   run: |
+      #     arch -arm64 pip install py3createtorrent
 
-      - name: Create torrent
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          arch -arm64 py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg -o ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.torrent --webseed https://download-silicoin-net.s3.us-west-2.amazonaws.com/install/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg
-          ls ${{ github.workspace }}/build_scripts/final_installer/
+      # - name: Create torrent
+      #   if: startsWith(github.ref, 'refs/tags/')
+      #   run: |
+      #     arch -arm64 py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg -o ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.torrent --webseed https://download-silicoin-net.s3.us-west-2.amazonaws.com/install/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg
+      #     ls ${{ github.workspace }}/build_scripts/final_installer/
 
-      - name: Upload Beta Installer
-        if: steps.check_secrets.outputs.HAS_AWS_SECRET && github.ref == 'refs/heads/main'
-        env:
-          SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.INSTALLER_UPLOAD_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
-          AWS_REGION: us-west-2
-        run: |
-          arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/beta/Silicoin-arm64_latest_beta.dmg
-          arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.sha256 s3://download-silicoin-net/beta/Silicoin-arm64_latest_beta.dmg.sha256
+      # - name: Upload Beta Installer
+      #   if: steps.check_secrets.outputs.HAS_AWS_SECRET && github.ref == 'refs/heads/main'
+      #   env:
+      #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.INSTALLER_UPLOAD_KEY }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
+      #     AWS_REGION: us-west-2
+      #   run: |
+      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/beta/Silicoin-arm64_latest_beta.dmg
+      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.sha256 s3://download-silicoin-net/beta/Silicoin-arm64_latest_beta.dmg.sha256
 
-      - name: Upload CATs Beta Installer
-        if: steps.check_secrets.outputs.HAS_AWS_SECRET && github.ref == 'refs/heads/protocol_and_cats_rebased'
-        env:
-          SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.INSTALLER_UPLOAD_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
-          AWS_REGION: us-west-2
-        run: |
-          arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/cats-beta-installers/Silicoin-arm64_latest_cats_beta.dmg
-          arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.sha256 s3://download-silicoin-net/cats-beta-installers/Silicoin-arm64_latest_cats_beta.dmg.sha256
+      # - name: Upload CATs Beta Installer
+      #   if: steps.check_secrets.outputs.HAS_AWS_SECRET && github.ref == 'refs/heads/protocol_and_cats_rebased'
+      #   env:
+      #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.INSTALLER_UPLOAD_KEY }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
+      #     AWS_REGION: us-west-2
+      #   run: |
+      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/cats-beta-installers/Silicoin-arm64_latest_cats_beta.dmg
+      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.sha256 s3://download-silicoin-net/cats-beta-installers/Silicoin-arm64_latest_cats_beta.dmg.sha256
 
-      - name: Upload Release Files
-        if: steps.check_secrets.outputs.HAS_AWS_SECRET && startsWith(github.ref, 'refs/tags/')
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.INSTALLER_UPLOAD_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
-          AWS_REGION: us-west-2
-        run: |
-          arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/install/
-          arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.sha256 s3://download-silicoin-net/install/
-          arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.torrent s3://download-silicoin-net/torrents/
+      # - name: Upload Release Files
+      #   if: steps.check_secrets.outputs.HAS_AWS_SECRET && startsWith(github.ref, 'refs/tags/')
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.INSTALLER_UPLOAD_KEY }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
+      #     AWS_REGION: us-west-2
+      #   run: |
+      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/install/
+      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.sha256 s3://download-silicoin-net/install/
+      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.torrent s3://download-silicoin-net/torrents/
 
       - name: Get tag name
         if: startsWith(github.ref, 'refs/tags/')
