--- a/.github/workflows/build-linux-installer-rpm.yml
+++ b/.github/workflows/build-linux-installer-rpm.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - protocol_and_cats_rebased
+      - pacr-dev
     tags:
       - '**'
   pull_request:
@@ -97,10 +97,10 @@ jobs:
     #   run: |
     #       ls $GITHUB_WORKSPACE/build_scripts/final_installer/
     #       aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain-${SILICOIN_INSTALLER_VERSION}-1.x86_64.rpm s3://download-silicoin-net/builds/
-    #       aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain-${SILICOIN_INSTALLER_VERSION}-1.x86_64.rpm s3://download-silicoin-net/protocol_and_cats_rebased/
+    #       aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain-${SILICOIN_INSTALLER_VERSION}-1.x86_64.rpm s3://download-silicoin-net/pacr-dev/
 
     - name: Create Checksums
-      if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/protocol_and_cats_rebased'
+      if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/pacr-dev'
       env:
         SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
       run: |
@@ -130,7 +130,7 @@ jobs:
     #     aws s3 cp $GITHUB_WORKSPACE/build_scripts/final_installer/silicoin-blockchain-${SILICOIN_INSTALLER_VERSION}-1.x86_64.rpm.sha256 s3://download-silicoin-net/beta/silicoin-blockchain-1.x86_64_latest_beta.rpm.sha256
 
     # - name: Upload CATs Beta Installer
-    #   if: steps.check_secrets.outputs.HAS_SECRET && github.ref == 'refs/heads/protocol_and_cats_rebased'
+    #   if: steps.check_secrets.outputs.HAS_SECRET && github.ref == 'refs/heads/pacr-dev'
     #   env:
     #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
     #   run: |
