--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - protocol_and_cats_rebased
+      - pacr-dev
     tags:
       - '**'
   pull_request:
