--- a/.github/workflows/build-macos-m1-installer.yml
+++ b/.github/workflows/build-macos-m1-installer.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - protocol_and_cats_rebased
+      - pacr-dev
     tags:
       - '**'
   pull_request:
@@ -127,7 +127,7 @@ jobs:
       #     AWS_REGION: us-west-2
       #   run: |
       #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/builds/
-      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/protocol_and_cats_rebased/
+      #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg s3://download-silicoin-net/pacr-dev/
 
       # - name: Install py3createtorrent
       #   if: startsWith(github.ref, 'refs/tags/')
@@ -152,7 +152,7 @@ jobs:
       #     arch -arm64 aws s3 cp ${{ github.workspace }}/build_scripts/final_installer/Silicoin-${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}-arm64.dmg.sha256 s3://download-silicoin-net/beta/Silicoin-arm64_latest_beta.dmg.sha256
 
       # - name: Upload CATs Beta Installer
-      #   if: steps.check_secrets.outputs.HAS_AWS_SECRET && github.ref == 'refs/heads/protocol_and_cats_rebased'
+      #   if: steps.check_secrets.outputs.HAS_AWS_SECRET && github.ref == 'refs/heads/pacr-dev'
       #   env:
       #     SILICOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.SILICOIN_INSTALLER_VERSION }}
       #     AWS_ACCESS_KEY_ID: ${{ secrets.INSTALLER_UPLOAD_KEY }}
