--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,7 +93,7 @@ steps:
       export AWS_SECRET_ACCESS_KEY=$(SecretKey)
       export AWS_DEFAULT_REGION=us-west-2
       aws s3 cp $(System.DefaultWorkingDirectory)/build_scripts/final_installer/*.dmg s3://download-silicoin-net/builds/
-      aws s3 cp $(System.DefaultWorkingDirectory)/build_scripts/final_installer/*.dmg s3://download-silicoin-net/protocol_and_cats_rebased/
+      aws s3 cp $(System.DefaultWorkingDirectory)/build_scripts/final_installer/*.dmg s3://download-silicoin-net/pacr-dev/
     displayName: "Upload to S3"
 
   - bash: |
@@ -126,7 +126,7 @@ steps:
       aws s3 cp $(System.DefaultWorkingDirectory)/build_scripts/final_installer/$SILICOIN_VERSION.dmg s3://download-silicoin-net/cats-beta-installers/Silicoin-intel_latest_cats_beta.dmg
       aws s3 cp $(System.DefaultWorkingDirectory)/build_scripts/final_installer/$SILICOIN_VERSION.dmg.sha256 s3://download-silicoin-net/cats-beta-installers/Silicoin-intel_latest_cats_beta.dmg.sha256
     displayName: "Upload CATs Beta Files"
-    condition: and(succeeded(), contains(variables['build.sourceBranch'], 'refs/heads/protocol_and_cats_rebased'))
+    condition: and(succeeded(), contains(variables['build.sourceBranch'], 'refs/heads/pacr-dev'))
 
   - bash: |
       export AWS_ACCESS_KEY_ID=$(AccessKey)
