--- a/.github/workflows/build-linux-installer-deb.yml
+++ b/.github/workflows/build-linux-installer-deb.yml
@@ -111,7 +111,7 @@ jobs:
       run: |
         . ./activate
         ldd --version
-        cd ./silicoin-blockchain-gui
+        cd ./silicoin-light-gui
         git status
         cd ../build_scripts
         sh build_linux_deb.sh amd64
