--- a/.github/workflows/build-linux-installer-rpm.yml
+++ b/.github/workflows/build-linux-installer-rpm.yml
@@ -71,7 +71,7 @@ jobs:
       run: |
         . ./activate
         ldd --version
-        cd ./silicoin-blockchain-gui
+        cd ./silicoin-light-gui
         git status
         cd ../build_scripts
         sh build_linux_rpm.sh amd64
