--- a/.gitignore
+++ b/.gitignore
@@ -88,13 +88,13 @@ main.sym
 *.recompiled
 
 # Dev config react
-# silicoin-blockchain-gui/src/dev_config.js
+# silicoin-light-gui/src/dev_config.js
 # React built app
-silicoin-blockchain-gui/.eslintcache
-silicoin-blockchain-gui/build
+silicoin-light-gui/.eslintcache
+silicoin-light-gui/build
 build_scripts/dist
 build_scripts/*.Dmg
-silicoin-blockchain-gui/src/locales/_build
+silicoin-light-gui/src/locales/_build
 build_scripts\win_build
 build_scripts/win_build
 win_code_sign_cert.p12
